Sorgente/src/objects/Elenco_Pazienti__c.object
<CustomObject>
    <fields>
        <fullName>Data_Ordine_Kit__c</fullName>
        <formula>Opportunita__r.Data_ordine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Ordine Kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data Gestione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ginecologo__c</fullName>
        <label>Ginecologo</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Elenco Pazienti</relationshipLabel>
        <relationshipName>Elenco_Pazienti</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID_Opportunita__c</fullName>
        <formula>Opportunita__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Opportunità</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Account__c</fullName>
        <formula>Ginecologo__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunità</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Elenco Pazienti</relationshipLabel>
        <relationshipName>Elenco_Pazienti</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origine__c</fullName>
        <formula>TEXT( Opportunita__r.Origine__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origine_in_fase_ordine__c</fullName>
        <formula>TEXT(Opportunita__r.Origine_in_fase_di_ordine__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origine in fase ordine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punti_Consiglio__c</fullName>
        <label>Punti Consiglio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stato_Paziente__c</fullName>
        <label>Stato Paziente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da gestire</fullName>
                </value>
                <value>
                    <fullName>Gestito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Opportunit__c</fullName>
        <description>Opportunity stage</description>
        <label>Status Opportunità</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Elenco Pazienti</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Numero Paziente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elenco Pazienti</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>